# orch

./: CLAUDE.md  hello_world_explained.md  pyproject.toml  test_file.txt
.workflow/: PROJECT.toml
.workflow/history/: 1774585729-quick.md
docs/: BUILD-LOG.md  BUILD-TRACKER.md
docs/architecture/: 00-OVERVIEW.md  01-AI-PACKAGE.md  02-AGENT-PACKAGE.md  03-CODING-AGENT.md  04-TUI-PACKAGE.md  05-WEB-UI-PACKAGE.md  06-MOM-AND-PODS.md  07-BUILD-AND-INFRA.md  08-CROSS-CUTTING-CONCERNS.md  09-DESIGN-DECISIONS-CONVERSATION.md  10-PROJECT-SKELETON.md  11-FUTURE-SYSTEMS.md
src/orch/: __init__.py  __main__.py  auth.py  cli.py
src/orch/agent/: __init__.py  loop.py
src/orch/ai/: __init__.py  provider.py
src/orch/config/: __init__.py  settings.py
src/orch/orchestrator/: __init__.py  history.py  orchestrator.py  state.py
src/orch/prompt/: __init__.py  builder.py  context_files.py
src/orch/session/: __init__.py  manager.py  store.py
src/orch/tools/: __init__.py  base.py  bash.py  edit.py  read.py  write.py
src/orch/tui/: __init__.py  app.py
src/orch/tui/components/: __init__.py  markdown.py
