[project]
name = "orch"
version = "0.1.0"
description = "Context-centric AI coding agent CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1", 
    "anthropic>=0.30", 
    "pydantic-settings>=2.0",
]

[project.scripts]
orch = "orch.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orch"]